--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".imgproc.ImageSmoothActivity">
+        </activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".imgproc.ImgProcessActivity"
             android:configChanges="keyboardHidden|orientation" />
