--- a/openCVLibrary341/build.gradle
+++ b/openCVLibrary341/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 25
+        targetSdkVersion 28
+        versionCode 3410
+        versionName "3.4.1"
     }
 
     buildTypes {
